--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 </section>
 
 <section id="certificaciones">
-    <h2>./ Certificaciones Google</h2>
+    <h2>./ Certificaciones</h2>
     <div class="grid">
         <div class="card">
             <h3>Google Cybersecurity</h3>
